added templates and updated charts urls/views

--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -37,7 +37,7 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="{% url 'charts:bar' %}">bar</a></li>
-              <li><a class="dropdown-item" href="{% url 'charts:linechart' %}">line</a></li>
+              <li><a class="dropdown-item" href="{% url 'charts:line' %}">line</a></li>
               <li><a class="dropdown-item" href="{% url 'charts:multi' %}">multi-line</a></li>
             </ul>
           </li>
