--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -12,7 +12,7 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="{% url 'stocks:index' %}">stocks</a></li>
-              <li><a class="dropdown-item" href="{% url 'screener:index' %}">screener</a></li>
+              <li><a class="dropdown-item" href="{% url 'screener:screener' %}">screener</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
