--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -50,6 +50,14 @@
               <li><a class="dropdown-item" href="http://flask.monxuncode.com">blog</a></li>
             </ul>
           </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              streamlit
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="http://streamlit.monxuncode.com">excel parser</a></li>
+            </ul>
+          </li>
         </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
